# sdne_lightning

./: .gitignore  pyproject.toml
data/: config.json  dummy.tsv
ops/: model_load_and_inference.py
src/sdne_lightning/: __init__.py  data.py  inference.py  model.py  preprocessor.py  train.py  util.py
src/tests/: test_data.py  test_inference.py  test_main.py  test_train.py  test_util.py
src/tests/resource/: dummy.json
